--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -46,9 +47,9 @@
   },
   "devDependencies": {
     "eslint": "^8.56.0",
+    "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
-    "husky": "^8.0.0"
+    "prettier": "^3.1.1"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
